キーでPriceを加算・減算できるようにして任意の価格で税込み計算

--- a/FunctionTax/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FunctionTax/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -111,10 +111,13 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
+K2Node_InputKey="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
+K2Node_InputDebugKey="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap
 
 [DetailCategories]
 ThirdPersonMap_C.Tick=True
@@ -134,6 +137,17 @@ K2Node_FunctionResult.Outputs=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+ThirdPersonMap_C.デフォルト=True
+K2Node_InputDebugKey.Input=True
+K2Node_InputDebugKey.Modifier=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap=1
